# Personal_assistant_WEB_project

./: .dockerignore  .env  .gitignore  Dockerfile  README.md  app.py  fly.toml  main.py  pyproject.toml  requirements.txt
config/: config.py
data/: app.db.models_personal_assistant
migrations/versions/: 1ce5eff895b5_initial_migration.py  b5a6ec983564_initial_migration.py  cd95100cc569_initial_migration.py
src/: __init__.py  models copy.py  models.py  routes.py
src/libs/: file_service.py  normalize.py  validation_contact.py  validation_file.py
src/repository/: contact.py  files.py  note.py  search_nt.py  tag.py  user.py
src/scrappy_libs/: currency.py  football.py  politics.py  weather.py
src/static/: style.css
src/static/css/: account_window.css  main.css  tic_tac.css
src/static/js/: uploader.js
src/templates/: account_window.html  add_address.html  add_address2.html  add_contact.html  add_contact2.html  add_email.html  add_email2.html  add_phone.html  add_phone2.html  base.html  base_notes.html  contacts.html  edit_address.html  edit_address2.html  edit_birthday.html  edit_birthday2.html  edit_contact.html  edit_contact_old.html  edit_email.html  edit_email2.html  edit_last_name.html  edit_last_name2.html  edit_name.html  edit_name2.html  edit_phone.html  edit_phone2.html  file_uploader.html  login.html  new_base.html  note_detail.html  note_edit.html  note_edit2.html  notebook.html  notebook2.html  notes.html  notes2.html  registration.html  search_n.html  search_n2.html  search_notes_tags_result.html  (+6 more)
