[tool.poetry]
name = "project_web"
version = "0.1.0"
description = ""
authors = ["Dimasta22 <serdyuk0002@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
Flask = "^2.2.2"
Flask-SQLAlchemy = "^2.5.1"
Flask-Migrate = "^3.1.0"
python-dotenv = "^0.21.0"
bcrypt = "^4.0.1"
google-api-python-client = "^2.65.0"
flask-paginate = "^2022.1.8"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
