[tool.poetry]
name = "project_web"
version = "0.1.0"
description = ""
authors = ["Dmytro Serdiuk <58885847+Dimasta22@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.10"
marshmallow = "^3.19.0"
requests = "^2.28.1"
beautifulsoup4 = "^4.11.1"
Flask = "^2.2.2"
flask-sqlalchemy = "^3.0.2"
Flask-Migrate = "^4.0.0"
python-dotenv = "^0.21.0"
bcrypt = "^4.0.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
