[tool.poetry]
name = "personal_assistant_web_project"
version = "0.1.0"
description = ""
authors = ["Andrii V. <kidstonek@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.28.1"
bs4 = "^0.0.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
